# exercices_mlops_alt

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  query_for_docker.txt
.devcontainer/: devcontainer.json  postcreatecommand.sh
.github/workflows/: ci-cd.yml
mlops_exo/: config.py  main_live_inference.py  main_observability.py  main_train.py  wordcount.py
mlops_exo/features/: encoding.py  holidays.py  task.py
mlops_exo/gathering/: cleaning.py  task.py
mlops_exo/ml/: task.py  utils.py  validation.py
mlruns/0/: meta.yaml
mlruns/815211928943405759/: meta.yaml
mlruns/815211928943405759/cdfa4d1d33744585ab40cc3935d0c978/: meta.yaml
mlruns/815211928943405759/cdfa4d1d33744585ab40cc3935d0c978/metrics/: is_error  is_very_high_value  latency
mlruns/815211928943405759/cdfa4d1d33744585ab40cc3935d0c978/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
notebooks/: notebook_intro.ipynb
src/: main_train.py
src/features/: encoding.py  holidays.py  markdown.py  task.py
src/gathering/: cleaning.py  task.py
src/ml/: task.py  validation.py
tests/: test_holidays.py  test_main_training.py  test_wordcount.py
tests/test_features/: test_holidays.py  test_markdown.py
