[tool.poetry]
name = "exercices-mlops"
version = "0.1.0"
description = ""
authors = ["Anastasia Barkova <anastasia.barkova@hymaia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
joblib = "^1.5.0"
scikit-learn = "^1.6.1"
pyarrow = "^20.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
