[tool.poetry]
name = "mlops-exo"
version = "0.1.0"
description = ""
authors = ["Anastasia Barkova <anastasia.barkova@hymaia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
joblib = "^1.5.0"
coverage = "^7.8.1"
pytest-cov = "^6.1.1"
ruff = "^0.11.10"
pyarrow = ">=4.0.0,<20.0.0"
scikit-learn = "1.5.0"
evidently = "0.6.6"
mlflow = "2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"